...
    <!-- TODO: LOGIN -->
    <string name="login_title">Login</string>
    <string name="hint_login_username">UserName</string>
    <string name="helper_login_username">type the user name</string>
    <string name="hint_login_password">PassWord</string>
    <string name="helper_login_password">Type the password</string>
    <string name="login_submit">Submit</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="Forgot_your_password">You forgot the password?</string>

    <!-- TODO: SIGNUP -->
    <string name="signup_title">Signup</string>
    <string name="hint_signup_username">User Name</string>
...
    <string name="company_contact">Contact:</string>
    <string name="company_phone">Phone:</string>
    <string name="company_email">Email:</string>
    <string name="company_country">Country:</string>
    <string name="company_city">City:</string>
    <string name="company_address">Address:</string>
    <string name="company_qualifications">qualifications</string>
    <string name="company_assignment">assignment</string>
    <string name="company_not_recovered">Company not recovered</string>
    <string name="jobs_list_not_retrieved">Jobs List not retrieved</string>
    <string name="no_jobs_were_found">No Jobs were found</string>
    <string name="list_of_jobs">List of Jobs</string>
    <string name="Qualy_candidate">Candidate:</string>
    <string name="qualy_date_of_admission">Date of admission:</string>
    <string name="qualy_employee">Employee</string>
    <string name="list_of_jobs_without_assignment">List of jobs without assignment</string>
    <string name="no_evaluations_were_found">No evaluations were found</string>
    <string name="evaluations_list_not_retrieved">Evaluations list not retrieved</string>
    <string name="monthly_evaluations">Monthly evaluations</string>
    <string name="evaluations">Evaluations</string>
    <string name="evals_add">Add</string>
    <string name="create_evaluation_title">Create Evaluation</string>
    <string name="evaluation_could_not_be_created">Evaluation could not be created</string>
    <string name="valuation_required">Valuation required!</string>
    <string name="createeval_year">Year</string>
    <string name="not_editable">Not editable</string>
    <string name="evalcreate_month">Month</string>
...
    <string name="evalcreate_valuation">Valuation</string>
    <string name="creaeval_type_your_notes">Type your notes</string>
    <string name="createeval_required_notes">Required Notes</string>
    <string name="year_not_editable">Year not editable</string>
    <string name="month_not_editable">Month not editable</string>
    <string name="could_not_retrieve_list_of_matched_candidates">Could not retrieve list of matched candidates</string>
    <string name="cumplen_candidate">Candidate</string>
    <string name="tech_skills">Tech Skills:</string>
    <string name="soft_skills">Soft Skills:</string>
    <string name="pers_skills">Pers Skills:</string>
    <string name="cumplen_birthday">BirthDay</string>
    <string name="cumple_valuation">Valuation</string>
    <string name="cumplen_photo">Photo</string>
    <string name="list_of_candidates_who_meet">Select a candidate</string>
    <string name="cumplen_assign">Assign</string>
    <string name="cumplen_back">Back</string>
    <string name="cumplen_profile">Profile:</string>
    <string name="cumplen_project">Project:</string>
    <string name="cumplen_initial_date">initial date:</string>
    <string name="assignment_successfully_completed">Assignment successfully completed</string>
    <string name="select_a_candidate">Select a candidate</string>
    <string name="back_to_company">Back to Company</string>
    <string name="evals_month">Month:</string>
    <string name="evals_year">Year:</string>
    <string name="evals_valuation">Valuation:</string>
    <string name="qualy_assigned_on">Assigned on</string>
    <string name="empresa_interviews">Interviews</string>
    <string name="empresa_type">Type:</string>
    <string name="EVsEmp_filters">Filters</string>
    <string name="param_apply">Apply</string>
    <string name="EvEmpresa_candidate">Candidate:</string>
    <string name="ResultEV_back">Back</string>
    <string name="back_to_candidate">Back to candidate</string>
    <string name="ABC_assignment">Assignment</string>
    <string name="ABC_interviews">Interviews</string>
    <string name="ABC_tests">Tests</string>
    <string name="asignaabc_back_to_jobs">Back to Jobs</string>
    <string name="jobsabc_filters">Filters</string>
...
    <string name="abcjobs_num">No:</string>
    <string name="abcjobs_nav_previous_item">Previous Item</string>
    <string name="abcjobs_nav_next_item">Next Item</string>
    <string name="qualy_param_profile">Profile</string>
    <string name="qualy_param_company">Company</string>
    <string name="qualy_param_candidate">Candidate</string>
    <string name="evals_back_jobs_list">Jobs List</string>
    <string name="creaeval_cancel">Cancel</string>
    <string name="creaeval_create">Create</string>
    <string name="firstvalue_excellent">Excellent</string>
    <string name="evresult_candidate">Candidate:</string>
    <string name="asignaitem_init">Init:</string>
    <string name="candidate_photo">Candidate photo</string>
    <string name="initial_values">0-0 de 0</string>
    <string name="evals_employee">Employee</string>
    <string name="evals_profile">Profile</string>
...
