...
                app:helperText="@string/select_value"
                app:helperTextTextColor="@color/black"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/AutoComplete1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="@string/firstvalue_excellent"
                    tools:text="Qualy"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNota"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:clickable="true"
                    android:focusable="true"
...
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelCreateEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/creaeval_cancel"
                    />

                <Button
                    android:id="@+id/btnCreateEval"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/creaeval_create"
                    />
...
