...
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black"

                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:backgroundTint="@color/GrisClaro"
                    android:contentDescription="@null"
                    android:maxLength="20"/>
...
                app:helperTextTextColor="@color/black"
                android:background="@color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:password="true"
                    android:text=""
                    android:backgroundTint="@color/GrisClaro"
                    android:maxLength="15" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/login_submit" />
...
