...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/encabezado_cumplen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cumplenRv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/encabezado_cumplen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/evals_item" />

...
            app:layout_constraintTop_toBottomOf="@id/cumplenRv">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cumplen_back"
                android:id="@+id/btnCancelCumplen"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cumplen_assign"
                android:id="@+id/btnAsignaCumplen"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
